--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>linking</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+        <nav id="main-navigation">
+            <ul>
+                <li><a href="/web">https://flatironschool.com</a></li>
+                <li><a href="/html">Flatiron School</a></li>
+            </ul>
+        </nav>
+        <script src="" async defer></script>
+    </body>
+</html>
